# simple-agent

./: .coverage  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  context_summary.md  lint.sh  main.py  plan.md  pyproject.toml  test.sh  vision.md
.github/workflows/: ci.yml
simple_agent/: __init__.py  __main__.py  config.py  display.py  errors.py  live_console.py
simple_agent/api/: client.py
simple_agent/cli/: __init__.py  completion.py  prompt.py
simple_agent/context/: __init__.py  compression_prompt.py  extractor.py  globals.py  loader.py  manager.py  prompts.py  schema.py
simple_agent/context/sources/: __init__.py
simple_agent/core/: agent.py  schema.py  tool_handler.py
simple_agent/exec/: command.py
simple_agent/files/: operations.py
simple_agent/llm/: client.py
simple_agent/messages/: __init__.py  manager.py  storage.py
simple_agent/tools/: __init__.py  exec.py  files.py  registry.py  utils.py
simple_agent/tools/exec/: __init__.py  execute_command.py
simple_agent/tools/files/: __init__.py  diff_utils.py  glob_files.py  grep_files.py  list_directory.py  patch_file.py  read_files.py  write_file.py
simple_agent/tools/mcp/: __init__.py  adapter.py  manager.py
tests/: __init__.py  conftest.py  test_config.py  test_display.py  test_live_console.py  test_main.py
tests/cli/: test_completion.py  test_prompt.py
tests/context/: __init__.py  test_compression_prompt.py  test_extractor.py  test_manager.py  test_prompts.py
tests/core/: test_agent.py  test_tool_handler.py
tests/llm/: test_client.py
tests/messages/: __init__.py  test_manager.py  test_storage.py
tests/tools/: test_exec.py  test_files.py  test_registry.py  test_tools.py  test_utils.py
tests/tools/exec/: __init__.py  test_execute_command.py  test_format_result.py
(+12 files in other folders)
